--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
 version: "3.8"
 services:
   backend_doodle:
-    build: 
-      context: ./api/
-      dockerfile: Dockerfile
-    container-name: backend_doodle
+    build: ./api
     image: backend_doodle
     restart: on-failure
     environment:
@@ -41,7 +38,6 @@ services:
     build:
       context: ./front/
       dockerfile: Dockerfile
-    container-name: frontend_doodle
     image: frontend_doodle
     depends_on:
       - proxy
