--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,44 @@
 version: "3.8"
 services:
+  proxy:
+    image: bunkerity/bunkerized-nginx
+    restart: always
+    ports:
+      - 81:8080
+      - 443:8443
+    volumes:
+      - ./server-confs:/server-confs:ro
+    environment:
+      - SERVER_NAME=tlc-cbaland.diverse-team.fr
+      - SERVE_FILES=yes
+      - DISABLE_DEFAULT_SERVER=no
+    # Transmission de l'IP publique vers les containers
+      - PROXY_REAL_IP=yes
+#      - MAX_CLIENT_SIZE=100m
+#      - USE_ANTIBOT=captcha
+# Configuration de letencrypt
+      - AUTO_LETS_ENCRYPT=yes
+# redirect du 80 vers 443 automatique
+      - REDIRECT_HTTP_TO_HTTPS=yes
+      - USE_LIMIT_REQ=no
+# Désactivation http2
+      - HTTP2=no
+# Paramétrage des entêtes http
+      - FEATURE_POLICY=accelerometer 'none'; ambient-light-sensor 'none'; autoplay 'none'; camera 'none'; display-capture 'none'; document-domain 'none'; encrypted-media 'none'; fullscreen 'none'; geolocation 'none'; gyroscope 'none'; magnetometer 'none'; microphone 'none'; midi 'none'; payment 'none'; picture-in-picture 'none'; speaker 'none'; sync-xhr 'self'; usb 'none'; vibrate 'none'; vr 'none'
   backend_doodle:
-    build: ./api
+    build:
+      context: .
+      dockerfile: api/src/main/docker/Dockerfile.jvm
     image: backend_doodle
     restart: on-failure
     environment:
       - quarkus.datasource.jdbc.url=jdbc:mysql://db:3306/tlc?useUnicode=true&serverTimezone=Europe/Paris
       - doodle.internalPadUrl=http://etherpad:9001/
-      - doodle.externalPadUrl=http://pad.tufe.diverse-team.fr:8085/
+      - doodle.externalPadUrl=http://pad.tlc-cbaland.diverse-team.fr:8085/
     depends_on:
       - db
     links:
       - db
-    ports :
-      - "8080:8080"
   db:
     image: mysql
     ports:
@@ -24,7 +49,7 @@ services:
       - MYSQL_USER=tlc
       - MYSQL_PASSWORD=tlc
   etherpad:
-    image: etherpad/etherpad:stable
+    image: etherpad/etherpad:1.8
     ports:
       - "9001:9001"
     volumes:
@@ -39,24 +64,4 @@ services:
       context: ./front/
       dockerfile: Dockerfile
     image: frontend_doodle
-    depends_on:
-      - proxy
-  proxy:
-    image: bunkerity/bunkerized-nginx
-    restart: always
-    ports:
-      - "80:8080"
-      - "443:8443"
-    volumes:
-      - ./server-confs:/server-confs:ro
-    environment:
-      - SERVER_NAME=aamiard.diverse-team.fr
-      - SERVE_FILES=no
-      - DISABLE_DEFAULT_SERVER=no
-      - PROXY_REAL_IP=yes
-      - AUTO_LETS_ENCRYPT=yes
-      - REDIRECT_HTTP_TO_HTTPS=yes
-      - USE_LIMIT_REQ=no
-      - HTTP2=no
-      - FEATURE_POLICY=accelerometer 'none'; ambient-light-sensor 'none'; autoplay 'none'; camera 'none'; display-capture 'none'; document-domain 'none'; encrypted-media 'none'; fullscreen 'none'; geolocation 'none'; gyroscope 'none'; magnetometer 'none'; microphone 'none'; midi 'none'; payment 'none'; picture-in-picture 'none'; speaker 'none'; sync-xhr 'self'; usb 'none'; vibrate 'none'; vr 'none'
-      - USE_REMOTE_API=no
+   
